cambios en prueba.ipynb

--- a/Semana5/prueba.ipynb
+++ b/Semana5/prueba.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4019e3a2",
    "metadata": {},
    "outputs": [
@@ -11,7 +11,17 @@
      "output_type": "stream",
      "text": [
       "✅ Spark iniciado: 3.5.4\n",
-      "Cuenta JVM: 10\n"
+      "Cuenta JVM: 10\n",
+      "RDD collect: [2, 4, 6, 8]\n",
+      "Worker Python: 3.11.0 (main, Oct 24 2022, 18:26:48) [MSC v.1933 64 bit (AMD64)]\n",
+      "+---+-----+\n",
+      "| id|texto|\n",
+      "+---+-----+\n",
+      "|  1| hola|\n",
+      "|  2|mundo|\n",
+      "+---+-----+\n",
+      "\n",
+      "✅ OK\n"
      ]
     }
    ],
