cambios en prueba.ipynb  guardardados

--- a/Semana5/prueba.ipynb
+++ b/Semana5/prueba.ipynb
@@ -21,7 +21,10 @@
       "|  2|mundo|\n",
       "+---+-----+\n",
       "\n",
-      "✅ OK\n"
+      "✅ OK\n",
+      "Spark OK: 3.5.4\n",
+      "defaultParallelism: 4\n",
+      "particiones shuffle: 200\n"
      ]
     }
    ],
@@ -71,8 +74,31 @@
     "df = spark.createDataFrame([(1,\"hola\"), (2,\"mundo\")], [\"id\",\"texto\"])\n",
     "df.show()\n",
     "\n",
-    "spark.stop()\n",
-    "print(\"✅ OK\")\n"
+    "print(\"✅ OK\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "def ensure_spark():\n",
+    "    global spark\n",
+    "    try:\n",
+    "        if spark is None or getattr(spark, \"_jsc\", None) is None:\n",
+    "            raise RuntimeError(\"Spark not active\")\n",
+    "    except NameError:\n",
+    "        pass  # spark no existe\n",
+    "    if 'spark' not in globals() or getattr(spark, \"_jsc\", None) is None:\n",
+    "        spark = (SparkSession.builder\n",
+    "                 .appName(\"DiagCheck\")\n",
+    "                 .master(\"local[*]\")\n",
+    "                 .config(\"spark.sql.shuffle.partitions\", \"8\")\n",
+    "                 .getOrCreate())\n",
+    "    return spark\n",
+    "\n",
+    "# Usar la función\n",
+    "spark = ensure_spark()\n",
+    "\n",
+    "print(\"Spark OK:\", spark.version)\n",
+    "print(\"defaultParallelism:\", spark.sparkContext.defaultParallelism)\n",
+    "print(\"particiones shuffle:\", spark.conf.get(\"spark.sql.shuffle.partitions\"))\n"
    ]
   }
  ],
